--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -10,6 +10,8 @@
     .container{
         max-width:800px;
         margin:0 auto;
+        color:magenta;
+        font-family=sans-serif
     }
         
     </style>
